# prishli_posmotret

./: .env  .gitignore  README.md  docker-compose.yaml
backend/: .dockerignore  .gitignore  Dockerfile  pyproject.toml  server.py
backend/src/: app.py  config.py  dependencies.py  utils.py
backend/src/database/: db.py  seed_post.py
backend/src/database/models/: comments.py  communities.py  community.py  community_members.py  friendship.py  likes.py  messages.py  post_tags.py  posts.py  tags.py  user.py  user_community.py  user_data.py
backend/src/routes/: __init__.py  __ init__.py  communities.py  friends.py  likes.py  mainpage.py  messages.py  profile.py
backend/src/services/post_recommendations/: combined_post_recommendations_service.py  like_post_service.py  smart_post_recommendation_service.py  smart_post_selector.py  tag_post_service.py
backend/src/services/user_recommendations/: combined_user_service.py  graph_user_service.py  like_user_service.py  recommendation_user_service.py  smart_recommendation_service.py  smart_user_selector.py  tag_user_service.py
front/social_app/: Dockerfile  index.html  package-lock.json  package.json
front/social_app/src/: App.jsx  index.css
front/social_app/src/components/: FeedList.jsx
front/social_app/src/components/community/: CommunityCard.jsx
front/social_app/src/components/header/: Header.css  Header.jsx  ProfileCard.css  ProfileCard.jsx
front/social_app/src/config/: api.js
front/social_app/src/hooks/: useApi.js
front/social_app/src/pages/: ProfileWrapper.jsx
front/social_app/src/pages/auth/: Auth.css  (+1 more)
(+21 files in other folders)
