[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.121.3",
    "asyncpg>=0.30.0",
    "sqlalchemy>=2.0.44",
    "uvicorn>=0.38.0",
    "python-dotenv>=1.0.1",
    "python-multipart>=0.0.20",
    "bcrypt==4.0.1",
    "passlib[bcrypt]>=1.7.4",
    "pyjwt[crypto]>=2.10.1",
]
